# genai-blog

./:  dark.scss  .gitignore  .nojekyll  .pre-commit-config.yaml  .secrets.baseline  LICENSE.html  LICENSE.md  NOTICE  _quarto.yml  about.html  about.qmd  add_license.py  dark.scss  index.html  index.qmd  index.xml  light.scss  listings.json  minimalist.scss  notebook-footer.html  pyproject.toml  robots.txt  search.json  sitemap.xml  styles.scss
.github/workflows/: publish.yml
data/financial-10k/2024/tesla/: ex41.htm  (+7 more)
posts/field_notes/: TIL-llm-agents.html  TIL-llm-agents.ipynb  TIL-llm-eval.html  TIL-llm-eval.ipynb
posts/post-with-code/: index.html  index.qmd  post1.html  post1.ipynb
posts/rag/: rag.html  rag.ipynb
posts/welcome/: index.html
site_libs/bootstrap/: bootstrap-27763fe0ebea7ce1bbe509daffc54142.min.css  bootstrap-6503b539e860678ebd7969f11388801c.min.css  bootstrap-68f63f3ddcbe40ef559cbc6db552239a.min.css  bootstrap-7a99a122b4ecca73bededa548e06e012.min.css  bootstrap-88291b95e529d21522a5315006bb7b73.min.css  bootstrap-98adfdbedee4b409630bacbff01802ea.min.css  bootstrap-9cedf14efc16c5711bdfd392556ae2cb.min.css  bootstrap-b9fb06b40595520018b066ba0a5a0af0.min.css  bootstrap-dark-0f3fcab235830384f4d32400fbc675aa.min.css  bootstrap-dark-1ef4c04c8eeb62af03e338041bee40cd.min.css  bootstrap-dark-28ef8ca241fc046e2f3072049e115012.min.css  bootstrap-dark-29a33d4b1dd7dd3d06f33acd9a0a2652.min.css  bootstrap-dark-58e9bc82fc556631c43f651f6ce50216.min.css  bootstrap-dark-615b43a3da5462553f9cd31c6449448e.min.css  bootstrap-e2c4bbb9fa9ed01e5b0d4654a2279c5b.min.css  (+3 more)
(+18 files in other folders)
