[project]
name = "genai-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "langchain>=1.2.0",
    "mlflow>=3.7.0",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "pre-commit>=4.5.1",
]
